Fixed clipped corner of hero picture

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ p {
 .hero {
     position: relative;
     width: 100%;
-    height: 900px;
+    height: 950px;
     background: url('/img/cryptex.png') no-repeat center center/cover;
     z-index: 0;
 }
